@@ -1,3 +1,8 @@
+2009-09-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* pop3d.test: Fixed typos in expected results, the socket command
+	  comes back fully qualified.
+
 2009-04-14  Andreas Kupries  <andreask@activestate.com>
 
 	* pop3d.man: Updated documentation with example on how to use the
